Missing Direction buttons (Add/Subtract) in the new sculpt Draw Sharp brush #69729

Closed
opened 2019-09-10 19:47:14 +02:00 by ThinkingPolygons · 5 comments

System Information
Windows 10

Blender Version
Broken: blender-2.81-e0f7ada0d2b0-windows64

Short description of error
The following buttons are missing in the new draw sharp brush
image.png
image.png
Exact steps for others to reproduce the error
Just go to sculpt mode and choose the draw sharp brush and look in the topbar or the tool settings in the properties editor. The buttons are not there.

**System Information** Windows 10 **Blender Version** Broken: blender-2.81-e0f7ada0d2b0-windows64 **Short description of error** The following buttons are missing in the new draw sharp brush ![image.png](https://archive.blender.org/developer/F7731888/image.png) ![image.png](https://archive.blender.org/developer/F7731890/image.png) **Exact steps for others to reproduce the error** Just go to sculpt mode and choose the draw sharp brush and look in the topbar or the tool settings in the properties editor. The buttons are not there.

Added subscriber: @ThinkingPolygons

Added subscriber: @ThinkingPolygons

This issue was referenced by fa12428ede

This issue was referenced by fa12428ede9acc51b3ca1f2fbefb4cfb32d4d089
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Pablo Dobarro self-assigned this 2019-09-10 22:05:04 +02:00
Member

Fixed in fa12428ede

Fixed in fa12428ede
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69729
No description provided.