Fix T69729: Missing Direction buttons in Draw Sharp brush

Reviewed By: brecht

Maniphest Tasks: T69729

Differential Revision: https://developer.blender.org/D5746